--- a/main.css
+++ b/main.css
@@ -19,11 +19,16 @@ GENERAL
 
 body {
 	font-size: 62.5%;
+	background: radial-gradient(circle, #2E2E2E, #171717);
 }
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Hammersmith One', arial;
 	color: #642E73;
+}
+
+h1 {
+	margin-top: 2.5em;
 }
 
 p {
@@ -36,7 +41,11 @@ a {
 }
 
 .moveDown {
-	margin-top: 4em;
+	margin-top: 2.5em;
+}
+
+.imgCircle {
+	border-radius: 50%;
 }
 
 /*****************************
@@ -75,6 +84,7 @@ ul.nav a:hover {
 }
 
 
+
 /*****************************
 HEADING (TITLE)
 *****************************/
@@ -89,6 +99,7 @@ HEADING (TITLE)
   padding-top: 1em;
   margin-bottom: 0;
   margin-right: 0;
+  background-repeat: no-repeat;
 }
 
 #mainTitle {
@@ -124,6 +135,24 @@ SECTION (CONTENT)
 	font-family: 'Oxygen', arial;
 	margin-top: 1em;
 	margin-bottom: 1em;
+}
+
+#ghanaFlag {
+	margin-top: 4em;
+}
+
+.ghanaBg {
+	position: relative;
+	text-align: center;
+	height: 396px;
+	background-size: 100% auto;
+	background-image: url("images/ghana_streets.jpg");
+	padding-top: 1em;
+	margin-bottom: 0;
+	margin-right: 0;
+	border-bottom: .5em solid #BFBFBF;
+	border-top: .5em solid #BFBFBF;
+
 }
 
 /*****************************
